--- a/uurukg/app/templates/all_filter_news.html
+++ b/uurukg/app/templates/all_filter_news.html
@@ -30,7 +30,7 @@
                                     <div class="d-flex justify-content-between bg-white border border-top-0 p-4">
                                         <div class="d-flex align-items-center">
                                         </div>
-                                        <div class="btn btn-secondary mx-2">
+                                        <div class="btn mx-2">
                                             <a href="/post/{{i.id}}" class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2" >Читать поробнее...</a>
                                         </div>
                                     </div>
