--- a/uurukg/app/templates/release_detail.html
+++ b/uurukg/app/templates/release_detail.html
@@ -2,6 +2,7 @@
 {% block page_content %}
 {% load embed_video_tags %}
 {% load static %}
+{% load i18n %}
 
 <!--<div class="py-5">-->
 <!--<h2 class="text-center"><small class="text-warning">{{ press_release.departments.title }}</small>: {{press_release.title}}</h2>-->
