--- a/uurukg/app/templates/reporter.html
+++ b/uurukg/app/templates/reporter.html
@@ -31,8 +31,8 @@
                                     <div class="d-flex justify-content-between bg-white border border-top-0 p-4">
                                         <div class="d-flex align-items-center">
                                         </div>
-                                        <div class="d-flex align-items-center btn">
-                                            <a href="/post/{{i.id}}" class="btn btn-secondary mx-2">{% trans 'Читать подробнее' %}...</a>
+                                        <div class="d-flex align-items-center">
+                                            <a href="/post/{{i.id}}" class="btn mx-2">{% trans 'Читать подробнее' %}...</a>
                                         </div>
                                     </div>
                                 </div>
