--- a/uurukg/app/templates/all_news.html
+++ b/uurukg/app/templates/all_news.html
@@ -31,7 +31,7 @@
                                         <div class="d-flex align-items-center">
                                         </div>
                                         <div class="d-flex align-items-center">
-                                            <a href="/post/{{i.id}}" class="btn btn-secondary mx-2" >Читать поробнее...</a>
+                                            <a href="/post/{{i.id}}" class="btn mx-2" >Читать поробнее...</a>
                                         </div>
                                     </div>
                                 </div>
