--- a/uurukg/app/templates/index.html
+++ b/uurukg/app/templates/index.html
@@ -37,25 +37,45 @@
                     <div class="py-2">
                         <strong>{% trans "Количество активных пользоваталей сейчас" %}: <strong>{{ anonym }}</strong> </strong>
                     </div>
-                    <form action="blog/search/" method="post">
-                        {% csrf_token %}
-                        <fieldset>
-                            <legend>{% trans "Коррупционеры и ОПГ" %}</legend>
-                            <p>Поиск по ФИО:</p>
-                            <input type="text" name="surname" placeholder="Фамилия..." class="responsive-input"
-                                   onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>
-                            <input type="text" name="name" placeholder="Имя..." class="responsive-input"
-                                   onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>
-                            <p class="mt-3">Поиск по должности:</p>
-                            <input type="text" name="position" placeholder="Должность..." class="responsive-input"
-                                   onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>
-                            <br>
-                            <input type="submit" class="btn mt-4" name="go" id="go" value="Поиск..."/>
-                        </fieldset>
-                    </form>
-                    <div class="py-4">
-                    <a class="text-secondary font-weight-medium text-decoration-none" href="dop/all">{% trans "Смотреть все" %}...</a>
-                    </div>
+<!--                    <form action="blog/search/" method="post">-->
+<!--                        {% csrf_token %}-->
+<!--                        <fieldset>-->
+<!--                            <legend>{% trans "Коррупционеры и ОПГ" %}</legend>-->
+<!--                            <p>Поиск по ФИО:</p>-->
+<!--                            <input type="text" name="surname" placeholder="Фамилия..." class="responsive-input"-->
+<!--                                   onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>-->
+<!--                            <input type="text" name="name" placeholder="Имя..." class="responsive-input"-->
+<!--                                   onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>-->
+<!--                            <p class="mt-3">Поиск по должности:</p>-->
+<!--                            <input type="text" name="position" placeholder="Должность..." class="responsive-input"-->
+<!--                                   onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>-->
+<!--                            <br>-->
+<!--                            <input type="submit" class="btn mt-4" name="go" id="go" value="Поиск..."/>-->
+<!--                        </fieldset>-->
+<!--                    </form>-->
+<!--                    <div class="py-4">-->
+<!--                    <a class="text-secondary font-weight-medium text-decoration-none" href="dop/all">{% trans "Смотреть все" %}...</a>-->
+<!--                    </div>-->
+                    <form action="/blog/search/" method="post">
+                            {% csrf_token %}
+                            <fieldset>
+                                <legend>{% trans "Коррупционеры и ОПГ" %}</legend>
+                                <p>Поиск по ФИО:</p>
+                                <input type="text" name="surname" placeholder="Фамилия..." class="responsive-input"
+                                       onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>
+                                <div class="py-1"></div>
+                                <input type="text" name="name" placeholder="Имя..." class="responsive-input"
+                                       onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>
+                                <p class="mt-3">Поиск по должности:</p>
+                                <input type="text" name="position" placeholder="Должность..." class="responsive-input"
+                                       onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>
+                                <br>
+                                <div class="row py-4">
+                                    <input type="submit" class="btn mr-5" name="go" id="go" value="Поиск..."/>
+                                    <a class="text-decoration-none btn" href="dop/all">{% trans "Смотреть все" %}...</a>
+                                </div>
+                            </fieldset>
+                        </form>
                 </div>
             </div>
         </div>
