--- a/uurukg/app/templates/release.html
+++ b/uurukg/app/templates/release.html
@@ -33,7 +33,7 @@
                                         <div class="d-flex align-items-center">
                                         </div>
                                         <div class="d-flex align-items-center mt-5">
-                                            <a href="/release/{{i.id}}" class="btn btn-secondary mx-2">{% trans 'Читать подробнее' %}...</a>
+                                            <a href="/release/{{i.id}}" class="btn mx-2">{% trans 'Читать подробнее' %}...</a>
                                         </div>
                                     </div>
                                 </div>
