--- a/uurukg/app/templates/sport.html
+++ b/uurukg/app/templates/sport.html
@@ -30,7 +30,7 @@
                                         <div class="d-flex align-items-center">
                                         </div>
                                         <div class="d-flex align-items-center">
-                                            <a href="/post/{{i.id}}" class="btn btn-secondary mx-2">{% trans 'Читать подробнее' %}...</a>
+                                            <a href="/post/{{i.id}}" class="btn mx-2">{% trans 'Читать подробнее' %}...</a>
                                         </div>
                                     </div>
                                 </div>
